--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eduorg-frontend",
+  "name": "rebelz-frontend",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -10,12 +10,13 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@ag-ui/core": "^0.0.38",
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.89.0",
     "@types/node": "^24.5.2",
-    "ag-grid-community": "31.3.2",
-    "ag-grid-react": "31.3.2",
+    "ag-grid-community": "^32.3.3",
+    "ag-grid-react": "^32.3.3",
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
@@ -23,7 +24,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
