--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
-APP_NAME=EduOrg API
-ENV=development
-DEBUG=true
-SECRET_KEY=change_me_to_a_random_string
+APP_NAME=Rebelz App
+# ENV=development
+ENV=production
+DEBUG=false
+SECRET_KEY=Rebelz is a basketball program for youth development and comunity building
 ACCESS_TOKEN_EXPIRE_MINUTES=60
-DATABASE_URL=sqlite:///./app.db
 ALLOWED_ORIGINS=http://localhost:3000,https://localhost:3000,https://your-frontend.example
 OPENAI_API_KEY=
 MODEL_NAME=gpt-4o-mini
+REDIS_PASSWORD=
+# DATABASE_URL=sqlite:///./app.db
+DATABASE_URL=postgresql://rebelz_user:postgrepass@db:5432/rebelzdb
+POSTGRES_DB=rebelzdb
+POSTGRES_USER=rebelz_user
+POSTGRES_PASSWORD=postgrepass
