--- a/env.example
+++ b/env.example
@@ -30,3 +30,13 @@ MODEL_NAME=gpt-4o-mini
 # Frontend Configuration
 # Replace with your actual domain/IP
 VITE_API_BASE_URL=https://your-domain.com
+
+# Security Settings
+MAX_FILE_SIZE=5242880  # 5MB in bytes
+RATE_LIMIT_CALLS=100   # Max API calls per period
+RATE_LIMIT_PERIOD=60   # Period in seconds
+ENABLE_DOCS=false      # Set to true only for development
+
+# Redis for production rate limiting (optional but recommended)
+REDIS_URL=redis://:your_redis_password@redis:6379/0
+REDIS_PASSWORD=your_redis_password
