--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,17 @@ services:
       - MODEL_NAME=${MODEL_NAME:-gpt-4o-mini}
       - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-60}
       - APP_NAME=${APP_NAME:-Rebelz API}
+      - MAX_FILE_SIZE=${MAX_FILE_SIZE:-5242880}
+      - RATE_LIMIT_CALLS=${RATE_LIMIT_CALLS:-100}
+      - RATE_LIMIT_PERIOD=${RATE_LIMIT_PERIOD:-60}
+      - ENABLE_DOCS=${ENABLE_DOCS:-false}
+      - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
     depends_on:
       - db
+      - redis
     restart: unless-stopped
+    networks:
+      - app-network
 
   db:
     image: postgres:15-alpine
@@ -26,9 +34,21 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    # Remove port exposure in production for security
+    # ports:
+    #   - "5432:5432"
     restart: unless-stopped
+    networks:
+      - app-network
+
+  redis:
+    image: redis:7-alpine
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-redis_password}
+    volumes:
+      - redis_data:/data
+    restart: unless-stopped
+    networks:
+      - app-network
 
   frontend:
     build:
@@ -41,6 +61,13 @@ services:
     depends_on:
       - backend
     restart: unless-stopped
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
+  redis_data:
+
+networks:
+  app-network:
+    driver: bridge
