--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@ag-ui/core": "^0.0.38",
+    "@copilotkit/react-core": "^1.10.4",
+    "@copilotkit/react-textarea": "^1.10.4",
+    "@copilotkit/react-ui": "^1.10.4",
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.89.0",
