--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: '3.8'
 
 services:
-  backend:
-    build: .
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "8000:8000"
+      - "80:80"
     environment:
       - ENV=production
       - DATABASE_URL=${DATABASE_URL}
@@ -19,12 +21,15 @@ services:
       - RATE_LIMIT_PERIOD=${RATE_LIMIT_PERIOD:-60}
       - ENABLE_DOCS=${ENABLE_DOCS:-false}
       - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
+      - VITE_API_BASE_URL=${VITE_API_BASE_URL}
     depends_on:
       - db
       - redis
     restart: unless-stopped
     networks:
       - app-network
+    volumes:
+      - app_uploads:/app/uploads
 
   db:
     image: postgres:15-alpine
@@ -34,9 +39,6 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    # Remove port exposure in production for security
-    # ports:
-    #   - "5432:5432"
     restart: unless-stopped
     networks:
       - app-network
@@ -50,23 +52,10 @@ services:
     networks:
       - app-network
 
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "80:80"
-    environment:
-      - VITE_API_BASE_URL=${VITE_API_BASE_URL}
-    depends_on:
-      - backend
-    restart: unless-stopped
-    networks:
-      - app-network
-
 volumes:
   postgres_data:
   redis_data:
+  app_uploads:
 
 networks:
   app-network:
