--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   backend:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     ports:
       - "8000:8000"
     environment:
@@ -13,7 +15,6 @@ services:
     volumes:
       - .:/app
       - ./app.db:/app/app.db
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     depends_on:
       - db
 
