Add database configuration support for development and production
- Add psycopg2-binary to requirements.txt for PostgreSQL connectivity
- Create interactive setup script (scripts/setup_env.py) for environment configuration
- Add environment templates for development and production
- Add comprehensive documentation (DIGITALOCEAN_SETUP.md, QUICK_START.md, etc.)
- Add database connection test script
- Add deployment verification script
- Update README with new setup instructions
- All credentials use placeholders for security

--- a/env.development.template
+++ b/env.development.template
@@ -1,10 +1,9 @@
-# Environment Variables Template
-# Copy this file to .env and configure based on your environment
+# Development Environment Configuration
+# Copy this to .env for local development
 
 # =============================================================================
 # ENVIRONMENT SELECTION
 # =============================================================================
-# Set to 'development' or 'production'
 ENV=development
 
 # =============================================================================
@@ -13,41 +12,30 @@ ENV=development
 APP_NAME=Rebelz API
 DEBUG=true
 
-# Security - IMPORTANT: Generate a secure secret key for production!
-# Use: openssl rand -hex 32
+# Security - Development secret key (change in production!)
 SECRET_KEY=dev_secret_key_change_in_production
 
 # JWT Token Settings
 ACCESS_TOKEN_EXPIRE_MINUTES=60
 
 # =============================================================================
-# DATABASE CONFIGURATION
+# DATABASE CONFIGURATION - LOCAL DEVELOPMENT
 # =============================================================================
-# Choose ONE of the following database configurations:
-
-# Option 1: Local SQLite (Development - Default)
+# Using SQLite for easy local development (no setup required)
 DATABASE_URL=sqlite:///./app.db
 
-# Option 2: Local PostgreSQL (Development with Docker)
+# Alternative: Use local PostgreSQL with Docker
+# Uncomment the line below and run: docker-compose -f docker-compose.dev.yml up db
 # DATABASE_URL=postgresql://rebelz_user:rebelz_password@localhost:5432/rebelzdb
 # POSTGRES_DB=rebelzdb
 # POSTGRES_USER=rebelz_user
 # POSTGRES_PASSWORD=rebelz_password
 
-# Option 3: DigitalOcean PostgreSQL (Production)
-# DATABASE_URL=postgresql://username:password@your-host.db.ondigitalocean.com:25060/defaultdb?sslmode=require
-# POSTGRES_DB=defaultdb
-# POSTGRES_USER=your_db_username
-# POSTGRES_PASSWORD=your_db_password
-
 # =============================================================================
 # CORS SETTINGS
 # =============================================================================
-# Development: Allow all origins
+# Allow all origins in development
 ALLOWED_ORIGINS=*
-
-# Production: Specify your domains
-# ALLOWED_ORIGINS=https://your-domain.com,https://www.your-domain.com
 
 # =============================================================================
 # AI INTEGRATION (Optional)
@@ -59,11 +47,7 @@ MODEL_NAME=gpt-4o-mini
 # =============================================================================
 # FRONTEND CONFIGURATION
 # =============================================================================
-# Development
 VITE_API_BASE_URL=http://localhost:8000
-
-# Production
-# VITE_API_BASE_URL=https://your-domain.com
 
 # =============================================================================
 # SECURITY SETTINGS
@@ -71,10 +55,10 @@ VITE_API_BASE_URL=http://localhost:8000
 MAX_FILE_SIZE=5242880  # 5MB in bytes
 RATE_LIMIT_CALLS=100   # Max API calls per period
 RATE_LIMIT_PERIOD=60   # Period in seconds
-ENABLE_DOCS=true       # Set to false in production
+ENABLE_DOCS=true       # API docs enabled in development
 
 # =============================================================================
-# REDIS (Optional - for production rate limiting)
+# REDIS (Optional - not required for development)
 # =============================================================================
-# REDIS_URL=redis://:your_redis_password@redis:6379/0
-# REDIS_PASSWORD=your_redis_password
+# REDIS_URL=redis://localhost:6379/0
+
