--- a/env.production.template
+++ b/env.production.template
@@ -1,53 +1,41 @@
-# Environment Variables Template
-# Copy this file to .env and configure based on your environment
+# Production Environment Configuration
+# Copy this to .env for production deployment with DigitalOcean
 
 # =============================================================================
 # ENVIRONMENT SELECTION
 # =============================================================================
-# Set to 'development' or 'production'
-ENV=development
+ENV=production
 
 # =============================================================================
 # APPLICATION SETTINGS
 # =============================================================================
 APP_NAME=Rebelz API
-DEBUG=true
+DEBUG=false
 
-# Security - IMPORTANT: Generate a secure secret key for production!
-# Use: openssl rand -hex 32
-SECRET_KEY=dev_secret_key_change_in_production
+# Security - IMPORTANT: Generate a secure secret key!
+# Run: openssl rand -hex 32
+SECRET_KEY=your_super_secure_secret_key_here_at_least_32_chars_long
 
 # JWT Token Settings
 ACCESS_TOKEN_EXPIRE_MINUTES=60
 
 # =============================================================================
-# DATABASE CONFIGURATION
+# DATABASE CONFIGURATION - DIGITALOCEAN POSTGRESQL
 # =============================================================================
-# Choose ONE of the following database configurations:
+# DigitalOcean Managed PostgreSQL Database (VPC Connection)
+# IMPORTANT: Replace with your actual database credentials
+DATABASE_URL=postgresql://username:password@your-host.db.ondigitalocean.com:25060/defaultdb?sslmode=require
 
-# Option 1: Local SQLite (Development - Default)
-DATABASE_URL=sqlite:///./app.db
-
-# Option 2: Local PostgreSQL (Development with Docker)
-# DATABASE_URL=postgresql://rebelz_user:rebelz_password@localhost:5432/rebelzdb
-# POSTGRES_DB=rebelzdb
-# POSTGRES_USER=rebelz_user
-# POSTGRES_PASSWORD=rebelz_password
-
-# Option 3: DigitalOcean PostgreSQL (Production)
-# DATABASE_URL=postgresql://username:password@your-host.db.ondigitalocean.com:25060/defaultdb?sslmode=require
-# POSTGRES_DB=defaultdb
-# POSTGRES_USER=your_db_username
-# POSTGRES_PASSWORD=your_db_password
+# Database credentials (for reference)
+POSTGRES_DB=defaultdb
+POSTGRES_USER=your_db_username
+POSTGRES_PASSWORD=your_db_password
 
 # =============================================================================
 # CORS SETTINGS
 # =============================================================================
-# Development: Allow all origins
-ALLOWED_ORIGINS=*
-
-# Production: Specify your domains
-# ALLOWED_ORIGINS=https://your-domain.com,https://www.your-domain.com
+# Replace with your actual production domains
+ALLOWED_ORIGINS=https://your-domain.com,https://www.your-domain.com
 
 # =============================================================================
 # AI INTEGRATION (Optional)
@@ -59,11 +47,8 @@ MODEL_NAME=gpt-4o-mini
 # =============================================================================
 # FRONTEND CONFIGURATION
 # =============================================================================
-# Development
-VITE_API_BASE_URL=http://localhost:8000
-
-# Production
-# VITE_API_BASE_URL=https://your-domain.com
+# Replace with your actual production domain
+VITE_API_BASE_URL=https://your-domain.com
 
 # =============================================================================
 # SECURITY SETTINGS
@@ -71,10 +56,12 @@ VITE_API_BASE_URL=http://localhost:8000
 MAX_FILE_SIZE=5242880  # 5MB in bytes
 RATE_LIMIT_CALLS=100   # Max API calls per period
 RATE_LIMIT_PERIOD=60   # Period in seconds
-ENABLE_DOCS=true       # Set to false in production
+ENABLE_DOCS=false      # Disable API docs in production
 
 # =============================================================================
-# REDIS (Optional - for production rate limiting)
+# REDIS (Recommended for production rate limiting)
 # =============================================================================
-# REDIS_URL=redis://:your_redis_password@redis:6379/0
-# REDIS_PASSWORD=your_redis_password
+# If using DigitalOcean Redis or external Redis service
+REDIS_URL=redis://:your_redis_password@redis:6379/0
+REDIS_PASSWORD=your_redis_password
+
