--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
 python-multipart==0.0.9
 email-validator==2.2.0
+psycopg2-binary==2.9.9
 psycopg[binary]==3.2.3
 httpx==0.27.2
 openai==1.46.0
