--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,16 +30,17 @@
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "@eslint/js": "^9.35.0",
+    "@eslint/js": "^9.38.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
-    "eslint": "^9.35.0",
+    "eslint": "^9.38.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.43.0",
+    "typescript-eslint": "^8.46.2",
     "vite": "^7.1.6"
   }
 }
